完成StateMachineActivity，并书写了测试用例。
Signed-off-by: Yin MingJun <yinmingjuncn@gmail.com>

--- a/test/testAll.htm
+++ b/test/testAll.htm
@@ -29,7 +29,8 @@
                 //testFunc();
                 //testWhile();
                 //testSwitch();
-                testParallel();
+                //testParallel();
+                testStateMachine();
             }
         </script>
 	</head>
