提供了ContextData的支持，允许定义和访问数据； 提供了LogicalOptActivity，支持AND、OR、NOT和XOR等逻辑操作； 提供了designer的基础类，规划designer应该具有的基础特性； 添加了对Const的支持； 以上功能通过了基本的测试。
Signed-off-by: Yin MingJun <yinmingjuncn@gmail.com>

--- a/test/testAll.htm
+++ b/test/testAll.htm
@@ -30,7 +30,9 @@
                 //testWhile();
                 //testSwitch();
                 //testParallel();
-                testStateMachine();
+                //testStateMachine();
+                //testContextData();
+                testLogicalOpt();
             }
         </script>
 	</head>
