1. 引入log4javascript输出log 2. 在activity中添加debug级别的log 3. 引入qunit测试框架
Signed-off-by: Yin MingJun <yinmingjuncn@gmail.com>

--- a/test/testAll.htm
+++ b/test/testAll.htm
@@ -11,9 +11,18 @@
 
         <script type="text/javascript" src="../ScriptsLib/jquery-1.4.1.js"></script>
         <script type="text/javascript" src="../ScriptsLib/MicrosoftAjax.debug.js"></script>
+        <script type="text/javascript" src="../ScriptsLib/log4javascript_uncompressed.js"></script>
         <script type="text/javascript" src="../build/jsWorkFlow-debug.js"></script>
         <script type="text/javascript" src="./qunit/qunit-1.10.0.js"> </script>  
         <script type="text/javascript" src="../build/test-debug.js"></script>
 
+        <script type="text/javascript">
+            testEngine();
+            testNoop();
+            testSequence();
+            testDelay();
+            testFunc();
+            testIfElse();
+        </script>
  </body>
  </html>
