--- a/test/testAll.htm
+++ b/test/testAll.htm
@@ -17,12 +17,18 @@
         <script type="text/javascript" src="../build/test-debug.js"></script>
 
         <script type="text/javascript">
-            testEngine();
-            testNoop();
-            testSequence();
-            testDelay();
-            testFunc();
-            testIfElse();
+//            testEngine();
+//            testNoop();
+//            testSequence();
+//            testDelay();
+//            testFunc();
+//            testIfElse();
+//            testParallel();
+//            testWhile();
+//            testSwitch();
+//            testContextData();
+//            testLogicalOpt();
+            testStateMachine();
         </script>
  </body>
  </html>
