提供错误处理机制。
Signed-off-by: Yin MingJun <yinmingjuncn@gmail.com>

--- a/test/testAll.htm
+++ b/test/testAll.htm
@@ -17,18 +17,19 @@
         <script type="text/javascript" src="../build/test-debug.js"></script>
 
         <script type="text/javascript">
-//            testEngine();
-//            testNoop();
-//            testSequence();
-//            testDelay();
-//            testFunc();
-//            testIfElse();
-//            testParallel();
-//            testWhile();
-//            testSwitch();
-//            testContextData();
-//            testLogicalOpt();
+            testEngine();
+            testNoop();
+            testSequence();
+            testDelay();
+            testFunc();
+            testIfElse();
+            testParallel();
+            testWhile();
+            testSwitch();
+            testContextData();
+            testLogicalOpt();
             testStateMachine();
+
         </script>
  </body>
  </html>
