提供运行期的异常的支持； 完善测试案例； BUG修正；
Signed-off-by: Yin MingJun <yinmingjuncn@gmail.com>

--- a/test/testAll.htm
+++ b/test/testAll.htm
@@ -29,7 +29,8 @@
             testContextData();
             testLogicalOpt();
             testStateMachine();
-
+            testTryCatch();
+            testGetTypeName();
         </script>
  </body>
  </html>
