1. Passed unit test in node.js 2. Publish NPM package for node.js 3. Publish version 0.2.1
Signed-off-by: Yin MingJun <yinmingjuncn@gmail.com>

--- a/test/browser/testAll.htm
+++ b/test/browser/testAll.htm
@@ -9,12 +9,12 @@
  </head><body>  
  <div id="qunit"></div>  
 
-        <script type="text/javascript" src="../ScriptsLib/jquery-1.4.1.js"></script>
-        <script type="text/javascript" src="../ScriptsLib/jsoop_browser.js"></script>
-        <script type="text/javascript" src="../ScriptsLib/log4javascript_uncompressed.js"></script>
-        <script type="text/javascript" src="../build/jsWorkFlow-debug.js"></script>
+        <script type="text/javascript" src="../../ScriptsLib/jquery-1.4.1.js"></script>
+        <script type="text/javascript" src="../../ScriptsLib/jsoop_browser.js"></script>
+        <script type="text/javascript" src="../../ScriptsLib/log4javascript_uncompressed.js"></script>
+        <script type="text/javascript" src="../../build/jsWorkFlow/jsWorkFlow_browser.js"></script>
         <script type="text/javascript" src="./qunit/qunit-1.10.0.js"> </script>  
-        <script type="text/javascript" src="../build/test-debug.js"></script>
+        <script type="text/javascript" src="../../prebuild/test-debug.js"></script>
 
         <script type="text/javascript">
             testEngine();
