--- a/test/browser/testAll.htm
+++ b/test/browser/testAll.htm
@@ -31,6 +31,7 @@
             testStateMachine();
             testTryCatch();
             testGetTypeName();
+            testActivityFactory();
         </script>
  </body>
  </html>
